GNOME Bugzilla – Bug 687055
exiftag: fix use after free and memory leak
Last modified: 2012-10-28 20:23:55 UTC
One variable was used after it was freed and then is leaked. In the second part variable 'str' was used instead of 'utfstr'
Created attachment 227469 [details] [review] proposed fix
Thanks! commit e921b5b0f3187ff3b210dd54473ff887eca020ab Author: Miguel Angel Cabrera Moya <madmac2501@gmail.com> Date: Sun Oct 28 19:59:41 2012 +0100 exiftag: fix use after free and memory leak https://bugzilla.gnome.org/show_bug.cgi?id=687055