exiftag: fix use after free and memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=687055